created unit test for Deck.java, test coverage: 35%, Deck.java coverage: 76%, refactored test/java dir in order to be able to use VisibleForTesting annotations, added the required dependency for it

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
             <version>${junit-jupiter-api.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>messages</artifactId>
+            <version>15.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
