--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,10 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       run: | 
         docker login -u $username -p $password
+
     - name: Build docker image
       id: docker_build
       run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/iet-hazi:v1.0
+
+    - name: Push docker image
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/iet-hazi:v1.0  
